--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^1.2.1",
+    "jquery": "^3.2.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0",
     "vue": "^2.2.1",
